2020-01-17  Aakash Jain  <aakash_jain@apple.com>

        [ews] Perform validation of patch before running layout-tests on Windows
        https://bugs.webkit.org/show_bug.cgi?id=206424

        Reviewed by Jonathan Bedard.

        * BuildSlaveSupport/ews-build/factories.py:

2020-01-17  Megan Gardner  <megan_gardner@apple.com>

        Fix assertion when test fast/events/ios/rotation/basic-rotation.html is followed by fast/events/ios/rotation/do-not-shrink-to-fit-content-after-rotation.html
        https://bugs.webkit.org/show_bug.cgi?id=206383
        <rdar://problem/58618513>

        Reviewed by Tim Horton.

        Rotation tests are asserting because _didEndRotation is being called multiple times.
        The call is at the end of viewWillTransitionToSize, which is called with the same
        size that the view already is. Therefore, if no size is changing, early out,
        which keeps this double call from happening.

        * WebKitTestRunner/ios/PlatformWebViewIOS.mm:
        (-[PlatformWebViewController viewWillTransitionToSize:withTransitionCoordinator:]):

2020-01-17  Jonathan Bedard  <jbedard@apple.com>

        Python 3: Add support to run-webkit-tests (Follow-up fix)
        https://bugs.webkit.org/show_bug.cgi?id=205291

        Unreviewed follow-up fix.

        * Scripts/webkitpy/common/unicode_compatibility.py:
        (decode_for): Handle case where provided value is None.

2020-01-17  Brady Eidson  <beidson@apple.com>

        TestWebKitAPI.AsyncFunction.Promise times out on slower machines in debug builds.
        <rdar://problem/58445164> and https://bugs.webkit.org/show_bug.cgi?id=206012

        Reviewed by Keith Miller.

        Previously, to force GC, over 30,000 function calls would be made.
        This was too slow on slower machines in debug builds. It eventually would've worked given enough time, but...
        It turns just a few hundred function calls with an API call to force GC seems reliable and is much faster.
        