@@ -1,5 +1,15 @@
 2020-01-17  Aakash Jain  <aakash_jain@apple.com>
 
+        [EWS] Print disk space usage for windows bots
+        https://bugs.webkit.org/show_bug.cgi?id=206421
+
+        Reviewed by Jonathan Bedard.
+
+        * BuildSlaveSupport/ews-build/steps.py:
+        (PrintConfiguration): Windows bot use cygwin, so df command works.
+
+2020-01-17  Aakash Jain  <aakash_jain@apple.com>
+
         [ews] Perform validation of patch before running layout-tests on Windows
         https://bugs.webkit.org/show_bug.cgi?id=206424
 
